--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grommet": "^2.35.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.71.0",
     "styled-components": "^5.3.11",
