--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,8 @@
     "react/require-default-props": "off",
     "react/function-component-definition": "off",
     "react/display-name": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
     "react/prop-types": [
       1,
       {
